access token service and model is created

--- a/.env.example
+++ b/.env.example
@@ -21,3 +21,8 @@ REDIS_PORT=6379
 
 # JWT Secret
 JWT_SECRET=mysecretkey
+REGISTER_SAVE_STATE_LIFETIME=300
+
+# OTP
+OTP_LENGTH=5
+OTP_EXPIRATION=120
