middleware rate limit is added

--- a/.env.example
+++ b/.env.example
@@ -26,3 +26,13 @@ REGISTER_SAVE_STATE_LIFETIME=300
 # OTP
 OTP_LENGTH=5
 OTP_EXPIRATION=120
+
+# RATE_LIMITER
+RATE_LIMITER_DEFAULT_LIMIT=120
+RATE_LIMITER_DEFAULT_PERIOD_PER_SECOND=60
+RATE_LIMITER_CRITICAL_LIMIT=3
+RATE_LIMITER_CRITICAL_PERIOD_PER_SECOND=600
+RATE_LIMITER_REGISTER_CRITICAL_LIMIT=3
+RATE_LIMITER_REGISTER_CRITICAL_PERIOD_PER_SECOND=1800
+RATE_LIMITER_LOGIN_CRITICAL_LIMIT=3
+RATE_LIMITER_LOGIN_CRITICAL_PERIOD_PER_SECOND=120
