minor fix+ user route is added

--- a/.env.example
+++ b/.env.example
@@ -19,8 +19,10 @@ REDIS_PASSWORD=password
 REDIS_HOST=redis
 REDIS_PORT=6379
 
-# JWT Secret
-JWT_SECRET=mysecretkey
+# JWT
+JWT_SECRET=mySecret
+JWT_ACCESS_TOKEN_LIFETIME=600000
+JWT_REFRESH_TOKEN_EXPIRATION=1200000
 REGISTER_SAVE_STATE_LIFETIME=300
 
 # OTP
